# society-public

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/v1/: balanced-3.yaml  balanced-6.yaml  balanced-7.yaml  balanced-8.yaml  baseline-none.yaml  permissive-only-3.yaml  personas.yaml  restrictive-only-4.yaml
configs/v2/: balanced-3.yaml  balanced-6.yaml  balanced-7.yaml  balanced-8-pr.yaml  balanced-8.yaml  permissive-only-3.yaml  personas.yaml  restrictive-only-4.yaml
docs/: decisions.md  design.md  external-benchmarks-plan.md  methodology.md  red-team-design.md  related-work.md  v2-design.md  v3-design.md  v3-harassment-classification.md  v3-headlines.md  v4-design.md  v4-results.md  v5a-results.md  v5b-results.md  v5c-results.md  v5d-results.md
infra/: README.md  author_v2_corpus.workflow.js  bootstrap_vllm.sh  reconstruct_v2_corpus.py
notebooks/: v2_analysis.ipynb  v3_analysis.ipynb
sessions/: 2026-06-06-session-01.md  2026-06-06-session-02.md  2026-06-07-session-03.md  2026-06-07-session-04.md  2026-06-09-session-05.md  2026-06-09-session-06.md  2026-06-09-session-07.md  2026-06-09-session-08.md  2026-06-10-session-09.md  2026-06-10-session-10.md  2026-06-10-session-11.md  2026-06-10-session-12.md  2026-06-10-session-13.md  2026-06-10-session-14.md  2026-06-11-session-15.md  2026-06-11-session-16.md  2026-06-11-session-17.md  2026-06-12-session-18.md
src/: analyze.py  analyze_external.py  analyze_v2.py  batch.py  config.py  llm_client.py  ollama_client.py  plot_v2.py  revote.py  run.py  vllm_client.py
user/: blog.md  blog_figures.ipynb  notes.txt
(+28 files in other folders)
