[project]
name = "society"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
analysis = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
]
